adding the widget

--- a/SpellCheckerDemo/FloatingPoint.xaml
+++ b/SpellCheckerDemo/FloatingPoint.xaml
@@ -3,11 +3,38 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Qalam" Height="70" Width="70" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Grid>
-        <Image Source="/Logo.png" 
+        <!-- Logo Image -->
+        <Image x:Name="LogoImage" Source="/Logo.png" 
                Stretch="Uniform" 
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
                Width="70" 
                Height="70"/>
+
+        <!-- Error Count Badge -->
+        <Grid x:Name="ErrorCountGrid" Visibility="Collapsed" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,-5,-5,0">
+            <!-- Outer white circle and arrow -->
+            <Grid Width="50" Height="50">
+                <!-- Outer white circle -->
+                <Ellipse Fill="#E8E8E8" Stroke="#CCCCCC" StrokeThickness="2" Width="50" Height="50" />
+
+                <!-- Arrow -->
+                <Path Fill="#E8E8E8" Stroke="#CCCCCC" StrokeThickness="2" 
+                      Data="M 40,0 L 50,10 L 40,20 L 35,15 Z"
+                      HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,-5,0"/>
+
+                <!-- Inner red circle -->
+                <Ellipse Fill="#FF0000" Width="35" Height="35" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+                <!-- Error Count Text -->
+                <TextBlock x:Name="ErrorCountText"
+                           Text="4"
+                           FontSize="24"
+                           FontWeight="Bold"
+                           Foreground="White"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"/>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
