--- a/SpellCheckerDemo/FloatingPoint.xaml
+++ b/SpellCheckerDemo/FloatingPoint.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SpellCheckerDemo.FloatingPointWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Qalam" Height="70" Width="70" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
+        Title="Qalam" Height="70" Width="70" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Name="MainWindow">
     <Grid>
         <!-- Logo Image -->
         <Image x:Name="LogoImage" Source="/Logo.png" 
@@ -30,5 +30,21 @@
                            Margin="0,3,0,0"/>
             </Grid>
         </Grid>
+
+        <!-- Fix All Errors Button -->
+    <Button 
+        x:Name="FixAllErrorsButton" 
+        Content="تصليح جميع الاخطاء" 
+        Visibility="Collapsed" 
+        HorizontalAlignment="Center" 
+        VerticalAlignment="Center" 
+        Click="FixAllErrorsButton_Click" 
+        Background="#008677" 
+        Foreground="#f8fcfb" 
+        FontFamily="Arial"
+        Padding="10,5"
+        FontSize="14"
+    />
+    
     </Grid>
 </Window>
